--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- RIGHT IMAGE -->
             <div class="col-lg-6 text-center">
                 <div class="image-wrapper">
-                    <img src="img/student.jpg" alt="profile">
+                    <img src="student.jpg" alt="profile">
                 </div>
 
                 <div class="social-icons">
@@ -281,7 +281,7 @@
 
           <div class="col-sm-6 col-md-4">
             <div class="skill-card">
-              <img src="img/freelance.png">
+              <img src="freelance.png">
               <h5>Freelancer</h5>
               <div class="dots">
                 <span class="on"></span><span class="on"></span><span class="on"></span><span class="on"></span><span class="on"></span>
@@ -291,7 +291,7 @@
 
           <div class="col-sm-6 col-md-4">
             <div class="skill-card">
-              <img src="img/invasion.png">
+              <img src="invasion.png">
               <h5>Invision</h5>
               <div class="dots">
                 <span class="on"></span><span class="on"></span><span class="on"></span><span></span><span></span>
@@ -315,32 +315,32 @@
 
   <div class="skills-grid">
   <div class="skill-card">
-    <img src="img/uiux.png" class="skill-icon" alt="UI UX">
+    <img src="uiux.png" class="skill-icon" alt="UI UX">
     <span>UI / UX Design</span>
   </div>
 
   <div class="skill-card">
-    <img src="img/framing.png" class="skill-icon" alt="Wireframing">
+    <img src="framing.png" class="skill-icon" alt="Wireframing">
     <span>Wireframing</span>
   </div>
 
   <div class="skill-card">
-    <img src="img/prototyping.png" class="skill-icon" alt="Prototyping">
+    <img src="prototyping.png" class="skill-icon" alt="Prototyping">
     <span>Prototyping</span>
   </div>
 
   <div class="skill-card">
-    <img src="img/html.png" class="skill-icon" alt="HTML">
+    <img src="html.png" class="skill-icon" alt="HTML">
     <span>HTML</span>
   </div>
 
   <div class="skill-card">
-    <img src="img/css.png" class="skill-icon" alt="CSS">
+    <img src="css.png" class="skill-icon" alt="CSS">
     <span>CSS</span>
   </div>
 
   <div class="skill-card">
-    <img src="img/js.png" class="skill-icon" alt="JavaScript">
+    <img src="js.png" class="skill-icon" alt="JavaScript">
     <span>JavaScript</span>
   </div>
 </div>
@@ -477,3 +477,4 @@
 
 </body>
 </html>
+
